Set javaOptions in IntegrationTest / run to overcome (hopefully!) weird test run crashes.